--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -31,7 +31,7 @@ jobs:
 
     - name: Build executable
       run: |
-        pyinstaller --onefile --windowed snake_game.py
+        pyinstaller --onefile --windowed --name=SnakeGame --add-data="*.py;." snake_game.py
 
     - name: Upload artifact
       uses: actions/upload-artifact@v4
